--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,62 @@
 version: "3"
 
 services:
-  webserver:
+  adm-dev:
     build:
-      context: ./bin/${PHPVERSION}
-    container_name: "${COMPOSE_PROJECT_NAME}-${PHPVERSION}"
+      context: ./www/web
+      dockerfile: Dockerfile.development
+    # command: -f src/jobs/managers/sqs.php
+    container_name: "adm-dev"
     deploy:
       resources:
         limits:
           memory: 100M
         reservations:
           memory: 50M
-    restart: "always"
     ports:
-      - "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
-      - "${HOST_MACHINE_SECURE_HOST_PORT}:443"
+      - "80:80"
     links:
       - database
     volumes:
-      - ${DOCUMENT_ROOT-./www}:/var/www/html:rw
-      - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - ./www/web:/var/www/html/app:rw
+      - ./www/web/config/php.ini-development:/usr/local/etc/php/php.ini
       - ${SSL_DIR-./config/ssl}:/etc/apache2/ssl/
-      - ${VHOSTS_DIR-./config/vhosts}:/etc/apache2/sites-enabled
       - ${LOG_DIR-./logs/apache2}:/var/log/apache2
       - ${XDEBUG_LOG_DIR-./logs/xdebug}:/var/log/xdebug
+      - ./www/web/config/sites-available.conf:/etc/apache2/sites-available/000-default.conf
     environment:
-      APACHE_DOCUMENT_ROOT: ${APACHE_DOCUMENT_ROOT-/var/www/html}
-      PMA_PORT: ${HOST_MACHINE_PMA_PORT}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      HOST_MACHINE_MYSQL_PORT: ${HOST_MACHINE_MYSQL_PORT}
+      AWS_ACCESS_KEY_ID: dummy
+      AWS_SECRET_ACCESS_KEY: dummy
       XDEBUG_CONFIG: "client_host=host.docker.internal remote_port=${XDEBUG_PORT}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+  # adm-sqs:
+  #   build:
+  #     context: ./www/web
+  #     dockerfile: Dockerfile.cli
+  #   command: -f src/jobs/managers/sqs.php
+  #   container_name: "adm-sqs"
+  #   restart: always
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 100M
+  #       reservations:
+  #         memory: 50M
+  #   links:
+  #     - database
+  #   volumes:
+  #     - ./www/web:/app:rw
+  #     - ./www/web/config/php.ini:/usr/local/etc/php/php.ini:rw
+  #     - /etc/timezone:/etc/timezone:ro
+  #     - /etc/localtime:/etc/localtime:ro
+  #   environment:
+  #     AWS_ACCESS_KEY_ID: dummy
+  #     AWS_SECRET_ACCESS_KEY: dummy
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
   database:
     build:
       context: "./bin/${DATABASE}"
@@ -68,17 +90,11 @@ services:
           memory: 50M
     ports:
       - "127.0.0.1:${HOST_MACHINE_REDIS_PORT}:6379"
-  # sqs:
-  #   container_name: "${COMPOSE_PROJECT_NAME}-sqs"
-  #   image: softwaremill/elasticmq
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 100M
-  #       reservations:
-  #         memory: 100M
-  #   ports:
-  #     - "9324:9324"
-  #     - "9325:9325"
-  #   volumes:
-  #     - "./config/sqs/queues.conf:/opt/elasticmq.conf"
+  sqs:
+    container_name: "${COMPOSE_PROJECT_NAME}-sqs"
+    image: softwaremill/elasticmq
+    ports:
+      - "9324:9324"
+      - "9325:9325"
+    volumes:
+      - "./www/web/sqs/queues.conf:/opt/elasticmq.conf"
